diesel-builders/tests/ui_stable/discretionary_missing_table_error.stderr
error: Expected table name: #[discretionary(table_name)]
 --> tests/ui_stable/discretionary_missing_table_error.rs:9:5
  |
9 |     #[discretionary]
  |     ^^^^^^^^^^^^^^^^
